[package]
name = "nostrss-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.199"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.21"
tonic = "0.11.0"
tabled = "0.15.0"
url = "2.3.1"
cron = "0.12.1"
secp256k1 = "0.29.0"
bech32 = "0.11.0"

[dependencies.nostrss_grpc]
path = "../nostrss-grpc"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
