[package]
name = "nostrss-cli"
version = "1.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = "1.0.204"
tokio = { version = "1.38.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.22"
tonic = "0.12.1"
tabled = "0.15.0"
url = "2.5.2"
cron = "0.12.1"
secp256k1 = "0.29.0"
bech32 = "0.11.0"

[dependencies.nostrss_grpc]
path = "../nostrss-grpc"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
