[package]
name = "nostrss"
version = "1.0.3"
edition = "2021"

[dependencies]
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
nostr-sdk = "0.30.0"
tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"]}
clap = { version = "4.5.9", features = ["derive"] }
tokio-cron-scheduler = "0.10.2"
reqwest = "0.12.5"
serde_yaml = "0.9.34-deprecated"
dotenv = "0.15.0"
quick-xml = "0.36.0"
md5 = "0.7.0"
log = "0.4.22"
atom_syndication = "0.12.3"
feed-rs = "2.0.0"
bytes = "1.6.1"
async-trait = "0.1.81"
env_logger = "0.11.3"
uuid = "1.10.0"
openssl = { version = "0.10.66", features = ["vendored"] }
new_string_template = "1.5.1"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
regex = "1.10.5"
tonic = "0.12.3"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.10.1"
mockall = "0.12.1"
mime = "0.3.17"
mediatype = "0.19.18"
[dependencies.nostrss_grpc]
path = "../nostrss-grpc"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

[build-dependencies]
tonic-build = "0.12.1"
