[package]
name = "nostrss"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
nostr-sdk = "0.30.0"
tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"]}
clap = { version = "4.5.23", features = ["derive"] }
tokio-cron-scheduler = "0.13.0"
reqwest = "0.12.9"
serde_yaml = "0.9.34-deprecated"
dotenv = "0.15.0"
quick-xml = "0.37.1"
md5 = "0.7.0"
log = "0.4.22"
atom_syndication = "0.12.6"
feed-rs = "2.3.0"
bytes = "1.9.0"
async-trait = "0.1.83"
env_logger = "0.11.5"
uuid = "1.11.0"
openssl = { version = "0.10.68", features = ["vendored"] }
new_string_template = "1.5.3"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
regex = "1.11.1"
tonic = "0.12.3"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.14.0"
mockall = "0.13.1"
mime = "0.3.17"
mediatype = "0.19.18"
[dependencies.nostrss_grpc]
path = "../nostrss-grpc"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

[build-dependencies]
tonic-build = "0.12.3"
